feat: add quotation api and update

--- a/src/app/i18n/locales/en-US/quotation.json
+++ b/src/app/i18n/locales/en-US/quotation.json
@@ -46,7 +46,7 @@
     "advanced.aiPoints.des": "$1000/year (appr. $0.02/point)",
     "quote.overview": "MuseDAM Quote Overview",
     "quote.title": "MuseDAM Quote",
-    "quote.export": "Export",
+    "quote.export": "Save as PDF",
     "quote.NO": "Quote No.",
     "product.service.details": "Product and Service Details",
     "basic.edition": "MuseDAM Basic Edition",
@@ -84,17 +84,19 @@
     "service.terms": "Service Terms",
     "service.terms.1": "1. This quote is valid for 30 days.",
     "service.terms.2": "2. Service begins upon contract signing and payment confirmation, valid for one year.",
-    "service.terms.3": "3. User seats, storage space, AI points and download traffic can be expanded based on actual business needs, with additional charges calculated according to the current service pricing.",
-    "service.terms.4": "4. Storage space can be expanded as needed, with additional fees calculated according to current service pricing.",
+    "service.terms.3": "3. User seats and storage space may be expanded based on actual business requirements, with additional charges calculated according to current service pricing and remaining service period.",
+    "service.terms.4": "4. AI points, download data, and overseas acceleration data may be flexibly expanded based on actual business needs, with add-ons purchased according to minimum purchase specifications.",
     "capacity.expansion": "Capacity Expansion",
     "expansion.memberSeats": "Member Seats",
     "expansion.memberSeats.desc": "Admin, Contributor, and Member roles configurable",
     "expansion.storageSpace": "Storage Space",
     "expansion.storageSpace.desc": "Monthly download traffic follows storage size",
     "expansion.aiPoints": "AI Points Expansion",
-    "expansion.aiPoints.desc": "One-time permanent team AI points (valid until consumed);\n AI points can be used for manual AI search, tagging, parsing, and content creation",
+    "expansion.aiPoints.desc": "Permanent AI points package: 288,000 points (≈200M tokens) per package, valid until consumed; For custom AI tagging, intelligent parsing, AI content creation, etc.",
     "expansion.downloadData": "Download Data Expansion",
     "expansion.downloadData.desc": "Download data package (valid until consumed)",
+    "expansion.GA": "Overseas Acceleration Data Expansion",
+    "expansion.GA.desc": "CDN/OSS acceleration package: 10TB per package (valid until consumed)",
     "expansion.points": " points",
     "form.required": "Please check the required information",
     "contact.email": "Email"
