--- a/src/app/i18n/locales/zh-CN/pricing-enterprise-features.json
+++ b/src/app/i18n/locales/zh-CN/pricing-enterprise-features.json
@@ -115,6 +115,19 @@
     "approvalWorkflow.1.detail": "自定义审批流程设计和管理工具",
     "approvalWorkflow.2.name": "审批人指定",
     "approvalWorkflow.2.detail": "为不同工作流阶段和内容类型分配特定审批人",
+    "aiAutoTaggingEngine.title": "AI 自动打标引擎",
+    "aiAutoTaggingEngine.0.name": "智能识别能力",
+    "aiAutoTaggingEngine.0.detail": "支持文本内容分析和图像识别，结合文件夹路径信息和关键词匹配机制进行精准内容分类",
+    "aiAutoTaggingEngine.1.name": "自适应打标策略",
+    "aiAutoTaggingEngine.1.detail": "基于客户指定的三级标签架构，支持多标签并行匹配和深层级优先策略",
+    "aiAutoTaggingEngine.2.name": "工作流程配置",
+    "aiAutoTaggingEngine.2.detail": "提供两种业务场景：自动打标模式（AI 直接应用）和审核打标模式（人工审核后批量操作）",
+    "aiAutoTaggingEngine.3.name": "系统管理控制",
+    "aiAutoTaggingEngine.3.detail": "包含引擎开关控制、数据统计监控、任务流程管理和动态权重调整功能",
+    "aiAutoTaggingEngine.4.name": "质量保障机制",
+    "aiAutoTaggingEngine.4.detail": "生成匹配置信度分数，确保打标准确性和可靠性",
+    "aiAutoTaggingEngine.5.name": "定制化标签应用",
+    "aiAutoTaggingEngine.5.detail": "区别于通用 AI 智能解析和打标，专门根据企业自定义标签体系进行精准分类标注",
     "complianceCheck.title": "合规检测",
     "complianceCheck.0.name": "内容安全检测",
     "complianceCheck.0.detail": "AI 驱动的成人和露骨内容自动筛查",
@@ -145,6 +158,11 @@
     "enterpriseSingleSignOn.1.detail": "通过企业微信进行单点登录配置和授权",
     "enterpriseSingleSignOn.2.name": "钉钉 SSO",
     "enterpriseSingleSignOn.2.detail": "通过钉钉进行单点登录设置和身份验证",
+    "globalAcceleration.title": "海外加速",
+    "globalAcceleration.0.name": "全球团队协作支持",
+    "globalAcceleration.0.detail": "确保海外团队成员能够正常访问系统，实现跨地区无障碍协作",
+    "globalAcceleration.1.name": "高性能网络服务",
+    "globalAcceleration.1.detail": "提供海外 CDN/OSS 加速流量包配额，保障全球用户的访问速度和稳定性",
     "customerService.title": "工单支持",
     "customerService.0.name": "工单支持",
     "customerService.0.detail": "专属工单系统，1-2 个工作日内响应",
