--- a/src/app/i18n/locales/zh-CN/quotation.json
+++ b/src/app/i18n/locales/zh-CN/quotation.json
@@ -14,7 +14,7 @@
     "by.year": "按年",
     "member.seat": "成员席位",
     "storage.space": "存储空间",
-    "ai.points": "AI 点数",
+    "ai.points": "AI 点数订阅",
     "base.cost": "基础费用",
     "advanced.modules": "高级模块",
     "implementation": "实施服务",
@@ -46,7 +46,7 @@
     "quote.overview": "MuseDAM 报价概览",
     "service.provider.yourName": "联系：业务顾问",
     "quote.title": "MuseDAM 报价",
-    "quote.export": "导出",
+    "quote.export": "保存为 PDF",
     "quote.NO": "报价单 No.",
     "quote.date": "报价日期",
     "quote.valid.days": "有效期为30天",
@@ -69,31 +69,33 @@
     "module.complianceCheck": "合规检测",
     "module.customMetadataFields": "元数据自定义字段",
     "module.watermark": "水印",
-    "module.enterpriseSSO": "企业 SSO 登录（飞书, 企业微信）",
+    "module.enterpriseSSO": "企业 SSO 登录",
     "module.enterpriseSSO.private": "企业 SSO 登录（飞书, 企业微信）",
     "module.customerService": "工单支持",
     "module.professionalServices": "专业服务与支持",
     "private.implementation": "私有化部署实施",
     "operation.maintenance.times": "运维服务（{times}次/年）",
-    "subtotal": "小计",
-    "total": "总计",
+    "subtotal": "小计（未税）",
+    "total": "总计（含税）",
     "customer.information": "客户信息",
     "service.provider": "服务提供商",
     "service.provider.name": "特赞（上海）信息科技有限公司",
     "service.terms": "服务条款",
     "service.terms.1": "1. 本报价单有效期为30天。",
     "service.terms.2": "2. 服务期限自合同签署并确认付款后开始，有效期一年。",
-    "service.terms.3": "3. 用户席位、存储空间、AI点数和下载流量可根据实际业务需求进行扩容，额外费用按当前服务定价标准计算。",
-    "service.terms.4": "4. 存储空间可按需扩充，额外费用按当前服务定价标准计算。",
-    "capacity.expansion": "容量扩展",
+    "service.terms.3": "3. 用户席位、存储空间可根据实际业务需求进行扩充，增加费用按当前服务价格及剩余服务期限计算。",
+    "service.terms.4": "4. AI 点数、下载流量、海外加速流量可根据实际业务需求灵活扩充，按最低起购规格进行增购。",
+    "capacity.expansion": "扩展服务",
     "expansion.memberSeats": "成员席位扩充",
     "expansion.memberSeats.desc": "可配置管理员、贡献者和成员角色权限",
     "expansion.storageSpace": "存储空间扩充",
     "expansion.storageSpace.desc": "每月下载流量跟随存储容量",
     "expansion.aiPoints": "AI 点数扩充",
-    "expansion.aiPoints.desc": "一次性永久团队AI点数（有效期消耗完为止）；AI点数可用于自定义文档AI检索、标签、解析、内容创作",
+    "expansion.aiPoints.desc": "一次性永久 AI 点数包 28.8 万点 (≈2亿 Token) /份，有效期消耗完为止；AI 点数可用于自定义 AI 标签、智能解析和 AI 内容创作等",
     "expansion.downloadData": "下载流量扩充",
-    "expansion.downloadData.desc": "下载流量包（有效期至消耗完为止）",
+    "expansion.downloadData.desc": "下载流量包 1TB/份（有效期至消耗完为止）",
+    "expansion.GA": "海外加速流量扩充",
+    "expansion.GA.desc": "CDN/OSS 加速流量包 10TB/份（消耗完为止）",
     "expansion.points": " 点",
     "form.required": "请填写必填信息",
     "contact.email": "邮箱"
