feat: generate pricing page

--- a/src/app/i18n/locales/en-US/quotation.json
+++ b/src/app/i18n/locales/en-US/quotation.json
@@ -19,7 +19,6 @@
     "advanced.modules": "Advanced Modules",
     "implementation": "Implementation",
     "operation.maintenance": "Operation and Maintenance",
-    "feature.list": "Show Feature List",
     "feature.overview": "Feature Overview",
     "feature.details": "Feature Details",
     "generate.now": "Generate Now",
@@ -30,20 +29,21 @@
     "basic.memberSeats.hint": "Admin, Contributor, and Member roles configurable",
     "memberSeats.perYear": "/seat/year",
     "memberSeats.perMonth": "/seat/month",
-    "basic.memberSeats.des": "$300/seat/year ($25/seat/month)",
+    "basic.memberSeats.des": "￥1,000/seat/year（￥84/seat/month）",
+    "basic.memberSeats.des.global": "$300/seat/year ($25/seat/month)",
     "basic.storageSpace.hint": "Monthly download traffic follows storage size",
     "basic.storageSpace.des": "$120/GB/year ($10/GB/month)",
     "basic.aiPoints.hint1": "4,000 points/month",
     "expand.points": " points",
     "basic.aiPoints.hint2": "Issued monthly, reset on the 1st of each month",
-    "basic.aiPoints.des": "$1000/year (appr. $0.02/point)",
+    "aiPoints.unit": "/point",
     "advanced.memberSeats.hint": "Admin, Contributor, and Member roles configurable",
-    "advanced.memberSeats.des": "$300/seat/year ($25/seat/month)",
+    "advanced.memberSeats.des": "￥1,000/seat/year（￥84/seat/month）",
+    "advanced.memberSeats.des.global": "$300/seat/year ($25/seat/month)",
     "advanced.storageSpace.hint": "Monthly download traffic follows storage size",
     "advanced.storageSpace.des": "$1,200/TB/year ($100/T/month)",
     "advanced.aiPoints.hint1": "4,000 points/month",
     "advanced.aiPoints.hint2": "Issued monthly, reset on the 1st of each month",
-    "advanced.aiPoints.des": "$1000/year (appr. $0.02/point)",
     "quote.overview": "MuseDAM Quote Overview",
     "quote.title": "MuseDAM Quote",
     "quote.export": "Save as PDF",
@@ -69,8 +69,10 @@
     "module.customerService": "Customer Service",
     "module.professionalServices": "Professional Services & Support",
     "private.implementation": "Private Deployment Implementation",
-    "operation.maintenance.times": "Operation and Maintenance ({times} times/year)",
+    "operation.maintenance.times": "Operation and Maintenance ({{times}} times/year)",
     "subtotal": "Subtotal",
+    "discount.subtotal": "Discount Subtotal( {{discount}} OFF)",
+    "vat": "VAT",
     "total": "Total",
     "quote.date": "Quote Date",
     "quote.valid.days": "Valid for 30 days",
@@ -99,5 +101,41 @@
     "expansion.GA.desc": "CDN/OSS acceleration package: 10TB per package (valid until consumed)",
     "expansion.points": " points",
     "form.required": "Please check the required information",
-    "contact.email": "Email"
+    "contact.email": "Email",
+    "module.aiAutoTag": "AI Auto Tagging Engine",
+    "module.aiAutoTagModule": "Module Activation Fee",
+    "module.aiAutoTagPoints": "AI Points Package",
+    "module.ga": "Overseas Acceleration",
+    "sso.feishu": "Feishu",
+    "sso.wecom": "WeCom",
+    "sso.dingtalk": "DingTalk",
+    "ai.autoTag.hint": "Basic annual module fee + pay-as-you-go computing power points package model",
+    "ai.autoTag.points.hint": "One-time permanent points, flexible top-up when consumed within validity period",
+    "ai.autoTag.points.tag": "288K points (≈200M Tokens)",
+    "ga.hint": "Overseas acceleration data package, flexible top-up when consumed within validity period",
+    "ga.unit": "/10T/year",
+    "sso.unit": "/channel/year",
+    "discount.settings": "Discount Settings",
+    "discount.input.label": "Please enter discount value",
+    "discount.input.hint": "Minimum discount cannot be less than 20% OFF",
+    "discount.unit": "% OFF",
+    "feature.display.options": "Feature Display Options",
+    "unselected.modules.pricing": "Unselected Modules Pricing",
+    "show.unselected.modules": "Show Unselected Module Pricing",
+    "hide.unselected.modules": "Hide Unselected Module Pricing",
+    "saas.standard.enterprise": "SaaS Standard Enterprise Edition",
+    "perpetual.license.standard": "Perpetual License Current Standard Enterprise Edition",
+    "admin.contributor.member": "Admin, Contributor and Member roles configurable",
+    "member.seat.price": "Member seat pricing",
+    "private.deployment.implementation": "Private Deployment Implementation",
+    "private.deployment.implementation.description": "Professional implementation services for private deployment, including system deployment, configuration, and training",
+    "implementation.cost": "Implementation Cost",
+    "product.operation.maintenance": "Product Operation and Maintenance Services",
+    "product.operation.maintenance.description": "Professional operation and maintenance services to ensure system stability and performance",
+    "private.edition.major.iterations": "Private Edition Major Iterations",
+    "private.edition.major.iterations.description": "Major version updates and feature iterations for private deployment",
+    "private.edition.major.iterations.price": "Pricing based on maintenance years",
+    "times.per.year": "times per year",
+    "service.cost": "Service Cost",
+    "museDAM.software": "MuseDAM Software"
 }
