--- a/src/app/i18n/locales/zh-CN/quotation.json
+++ b/src/app/i18n/locales/zh-CN/quotation.json
@@ -19,9 +19,8 @@
     "advanced.modules": "高级模块",
     "implementation": "实施服务",
     "operation.maintenance": "运维服务",
-    "feature.list": "查看功能列表",
-    "feature.overview": "功能概览",
-    "feature.details": "功能详情",
+    "feature.overview": "展示功能概览（推荐）",
+    "feature.details": "展示功能概览 + 所有详情",
     "generate.now": "立即生成",
     "placeholder.company": "请输入公司名称",
     "placeholder.contact": "请输入联系方式",
@@ -29,20 +28,21 @@
     "placeholder.contactEmail": "请输入你的企业邮箱",
     "basic.memberSeats.hint": "可配置管理员、贡献者和成员角色权限",
     "basic.memberSeats.des": "￥1,000/席/年（￥84/席/月）",
+    "basic.memberSeats.des.global": "$300/席/年 ($25/席/年)",
     "memberSeats.perYear": "/席/年",
     "memberSeats.perMonth": "/席/月",
     "basic.storageSpace.hint": "每月下载流量跟随存储容量",
     "basic.storageSpace.des": "￥5,000/TB/年（￥418/TB/月）",
     "basic.aiPoints.hint1": "4,000点/月",
     "basic.aiPoints.hint2": "每月重置并发放",
-    "basic.aiPoints.des": "￥3,600/年（￥0.075/点）",
+    "aiPoints.unit": "/点",
     "advanced.memberSeats.hint": "可配置管理员、贡献者和成员角色权限",
     "advanced.memberSeats.des": "￥1,000/席/年（￥84/席/月）",
+    "advanced.memberSeats.des.global": "$300/席/年 ($25/席/年)",
     "advanced.storageSpace.hint": "每月下载流量跟随存储容量",
     "advanced.storageSpace.des": "￥5,000/TB/年（￥418/TB/月）",
     "advanced.aiPoints.hint1": "4,000点/月",
     "advanced.aiPoints.hint2": "每月重置并发放",
-    "advanced.aiPoints.des": "￥3,600/年（￥0.075/点）",
     "quote.overview": "MuseDAM 报价概览",
     "service.provider.yourName": "联系：业务顾问",
     "quote.title": "MuseDAM 报价",
@@ -76,6 +76,8 @@
     "private.implementation": "私有化部署实施",
     "operation.maintenance.times": "运维服务（{times}次/年）",
     "subtotal": "小计（未税）",
+    "discount.subtotal": "优惠小计（{discount}折）",
+    "vat": "增值税率",
     "total": "总计（含税）",
     "customer.information": "客户信息",
     "service.provider": "服务提供商",
@@ -98,5 +100,41 @@
     "expansion.GA.desc": "CDN/OSS 加速流量包 10TB/份（消耗完为止）",
     "expansion.points": " 点",
     "form.required": "请填写必填信息",
-    "contact.email": "邮箱"
+    "contact.email": "邮箱",
+    "module.aiAutoTag": "AI 自动打标引擎",
+    "module.aiAutoTagModule": "模块开通费",
+    "module.aiAutoTagPoints": "AI 点数包",
+    "module.ga": "海外加速",
+    "sso.feishu": "飞书",
+    "sso.wecom": "企业微信",
+    "sso.dingtalk": "钉钉",
+    "ai.autoTag.hint": "采用基础年度模块费+ 按量计费的算力点数包模式",
+    "ai.autoTag.points.hint": "一次性永久点数，有效期内消耗完毕可灵活增购",
+    "ai.autoTag.points.tag": "28.8万点 (≈2亿 Tokens)",
+    "ga.hint": "海外加速流量包，有效期内消耗完毕可灵活增购",
+    "ga.unit": "/10T/年",
+    "sso.unit": "/渠道/年",
+    "discount.settings": "优惠设置",
+    "discount.input.label": "请输入折扣数值",
+    "discount.input.hint": "最低折扣不得低于 8 折",
+    "discount.unit": "折",
+    "feature.display.options": "功能明细展示",
+    "unselected.modules.pricing": "未选模块报价",
+    "show.unselected.modules": "展示未选模块报价",
+    "hide.unselected.modules": "不展示未选模块报价",
+    "saas.standard.enterprise": "SaaS 标准企业版",
+    "perpetual.license.standard": "永久授权当前标准企业版",
+    "admin.contributor.member": "管理员、贡献者和成员角色可配置",
+    "member.seat.price": "成员席位价格",
+    "private.deployment.implementation": "私有化部署实施",
+    "private.deployment.implementation.description": "私有化部署专业实施服务，包括系统部署、配置和培训",
+    "implementation.cost": "实施费用",
+    "product.operation.maintenance": "产品运维服务",
+    "product.operation.maintenance.description": "专业运维服务，确保系统稳定性和性能",
+    "private.edition.major.iterations": "私有版重大迭代",
+    "private.edition.major.iterations.description": "私有化部署重大版本更新和功能迭代",
+    "private.edition.major.iterations.price": "根据运维年限定价",
+    "times.per.year": "次/年",
+    "service.cost": "服务费用",
+    "museDAM.software": "MuseDAM 软件"
 }
