--- a/src/app/i18n/locales/zh-CN/quotation.json
+++ b/src/app/i18n/locales/zh-CN/quotation.json
@@ -61,6 +61,7 @@
     "seats": "席",
     "points.month": "点/月",
     "per.year": "/年",
+    "package": "流量包",
     "advanced.modules.title": "高级模块",
     "advanced.cost": "高级费用",
     "module.advancedFeatures": "高级功能",
@@ -74,9 +75,9 @@
     "module.customerService": "工单支持",
     "module.professionalServices": "专业服务与支持",
     "private.implementation": "私有化部署实施",
-    "operation.maintenance.times": "运维服务（{times}次/年）",
+    "operation.maintenance.times": "运维服务（{{times}}次/年）",
     "subtotal": "小计（未税）",
-    "discount.subtotal": "优惠小计（{discount}折）",
+    "discount.subtotal": "优惠小计（{{discount}}折）",
     "vat": "增值税率",
     "total": "总计（含税）",
     "customer.information": "客户信息",
@@ -114,6 +115,9 @@
     "ga.hint": "海外加速流量包，有效期内消耗完毕可灵活增购",
     "ga.unit": "/10T/年",
     "sso.unit": "/渠道/年",
+    "ai.AutoTagEngine.quantity": "{{value}}份AI点数包",
+    "ai.AutoTagEngine.des": "基础年度模块费 ({{prefix}}{{moduleCost}}/年) + 永久点数包 x {{pointsNum}} ({{prefix}} {{pointsCost}})；\n AI 算力点数包每份为 28.8万点 (≈2亿 Tokens)",
+    "ai.AutoTagEngine.previewDes": "基础年度模块费 + 永久点数包；\n AI 算力点数包每份为 28.8万点 (≈2亿 Tokens)",
     "discount.settings": "优惠设置",
     "discount.input.label": "请输入折扣数值",
     "discount.input.hint": "最低折扣不得低于 8 折",
