--- a/src/app/i18n/locales/en-US/quotation.json
+++ b/src/app/i18n/locales/en-US/quotation.json
@@ -22,10 +22,7 @@
     "feature.overview": "Feature Overview",
     "feature.details": "Feature Details",
     "generate.now": "Generate Now",
-    "placeholder.company": "Please enter company name",
-    "placeholder.contact": "Please enter contact info",
-    "placeholder.email": "Please enter customer email",
-    "placeholder.contactEmail": "Please enter your email",
+    "input.placeholder": "Please enter",
     "basic.memberSeats.hint": "Admin, Contributor, and Member roles configurable",
     "memberSeats.perYear": "/seat/year",
     "memberSeats.perMonth": "/seat/month",
