--- a/src/app/i18n/locales/zh-CN/quotation.json
+++ b/src/app/i18n/locales/zh-CN/quotation.json
@@ -22,10 +22,7 @@
     "feature.overview": "展示功能概览（推荐）",
     "feature.details": "展示功能概览 + 所有详情",
     "generate.now": "立即生成",
-    "placeholder.company": "请输入公司名称",
-    "placeholder.contact": "请输入联系方式",
-    "placeholder.email": "请输入客户企业邮箱",
-    "placeholder.contactEmail": "请输入你的企业邮箱",
+    "input.placeholder": "请输入",
     "basic.memberSeats.hint": "可配置管理员、贡献者和成员角色权限",
     "basic.memberSeats.des": "￥1,000/席/年（￥84/席/月）",
     "basic.memberSeats.des.global": "$300/席/年 ($25/席/年)",
@@ -88,7 +85,7 @@
     "service.terms.2": "2. 服务期限自合同签署并确认付款后开始，有效期一年。",
     "service.terms.3": "3. 用户席位、存储空间可根据实际业务需求进行扩充，增加费用按当前服务价格及剩余服务期限计算。",
     "service.terms.4": "4. AI 点数、下载流量、海外加速流量可根据实际业务需求灵活扩充，按最低起购规格进行增购。",
-    "capacity.expansion": "扩展服务",
+    "capacity.expansion": "扩充服务",
     "expansion.memberSeats": "成员席位扩充",
     "expansion.memberSeats.desc": "可配置管理员、贡献者和成员角色权限",
     "expansion.storageSpace": "存储空间扩充",
