--- a/src/app/i18n/locales/en-US/quotation.json
+++ b/src/app/i18n/locales/en-US/quotation.json
@@ -91,7 +91,7 @@
     "expansion.storageSpace": "Storage Space",
     "expansion.storageSpace.desc": "Monthly download traffic follows storage size",
     "expansion.aiPoints": "AI Points Expansion",
-    "expansion.aiPoints.desc": "Permanent AI points package: 288,000 points (≈200M tokens) per package, valid until consumed; For custom AI tagging, intelligent parsing, AI content creation, etc.",
+    "expansion.aiPoints.desc": "Permanent AI points package: 268,000 points (≈200M tokens) per package, valid until consumed; For custom AI tagging, intelligent parsing, AI content creation, etc.",
     "expansion.downloadData": "Download Data Expansion",
     "expansion.downloadData.desc": "Download data package (valid until consumed)",
     "expansion.GA": "Overseas Acceleration Data Expansion",
@@ -108,13 +108,13 @@
     "sso.dingtalk": "DingTalk",
     "ai.autoTag.hint": "Basic annual module fee + pay-as-you-go computing power points package model",
     "ai.autoTag.points.hint": "One-time permanent points, flexible top-up when consumed within validity period",
-    "ai.autoTag.points.tag": "288K points (≈200M Tokens)",
+    "ai.autoTag.points.tag": "268,000 points (≈200M Tokens)",
     "ga.hint": "Overseas acceleration data package, flexible top-up when consumed within validity period",
     "ga.unit": "/10T/year",
     "sso.unit": "/channel/year",
     "ai.AutoTagEngine.quantity": "{{value}} AI points package(s)",
-    "ai.AutoTagEngine.des": "Base annual fee ({{prefix}}{{moduleCost}}/year) + Permanent AI points package x {{pointsNum}}\n({{prefix}}{{pointsCost}}); 288,000 points per package (≈200M tokens)",
-    "ai.AutoTagEngine.previewDes": "Base annual fee + Permanent AI points package；\n  288,000 points per package (≈200M tokens)",
+    "ai.AutoTagEngine.des": "Base annual fee ({{prefix}}{{moduleCost}}/year) + Permanent AI points package x {{pointsNum}}\n({{prefix}}{{pointsCost}}); 268,000 points per package (≈200M tokens)",
+    "ai.AutoTagEngine.previewDes": "Base annual fee + Permanent AI points package；\n  268,000 points per package (≈200M tokens)",
     "discount.settings": "Discount Settings",
     "discount.input.label": "Please enter discount value",
     "discount.input.hint": "Minimum discount cannot be less than 20% OFF",
