--- a/src/app/i18n/locales/en-US/quotation.json
+++ b/src/app/i18n/locales/en-US/quotation.json
@@ -20,8 +20,9 @@
     "implementation": "Implementation",
     "operation.maintenance": "Operation and Maintenance",
     "feature.overview": "Feature Overview",
-    "feature.details": "Feature Details",
+    "feature.details": "Feature Overview + Details",
     "generate.now": "Generate Now",
+    "generating": "Generating",
     "input.placeholder": "Please enter",
     "basic.memberSeats.hint": "Admin, Contributor, and Member roles configurable",
     "memberSeats.perYear": "/seat/year",
@@ -50,6 +51,8 @@
     "enterprise.edition": "MuseDAM Enterprise Edition",
     "software.license": "MuseDAM Software License",
     "year.s": "year(s)",
+    "years": "years",
+    "year": "year",
     "seats": "seats",
     "points.month": "points/month",
     "per.year": "/year",
@@ -61,8 +64,7 @@
     "module.complianceCheck": "Compliance Check",
     "module.customMetadataFields": "Custom Metadata Fields",
     "module.watermark": "Watermark",
-    "module.enterpriseSSO": "Enterprise Single Sign-On (Feishu, Dingding)",
-    "module.enterpriseSSO.private": "Enterprise Single Sign-On (SSO)",
+    "module.enterpriseSSO": "Enterprise Single Sign-On",
     "module.customerService": "Customer Service",
     "module.professionalServices": "Professional Services & Support",
     "private.implementation": "Private Deployment Implementation",
@@ -86,15 +88,16 @@
     "service.terms.3": "3. User seats and storage space may be expanded based on actual business requirements, with additional charges calculated according to current service pricing and remaining service period.",
     "service.terms.4": "4. AI points, download data, and overseas acceleration data may be flexibly expanded based on actual business needs, with add-ons purchased according to minimum purchase specifications.",
     "capacity.expansion": "Capacity Expansion",
+    "expansion": " Expansion",
     "expansion.memberSeats": "Member Seats",
     "expansion.memberSeats.desc": "Admin, Contributor, and Member roles configurable",
     "expansion.storageSpace": "Storage Space",
     "expansion.storageSpace.desc": "Monthly download traffic follows storage size",
-    "expansion.aiPoints": "AI Points Expansion",
+    "expansion.aiPoints": "AI Points",
     "expansion.aiPoints.desc": "Permanent AI points package: 268,000 points (≈200M tokens) per package, valid until consumed; For custom AI tagging, intelligent parsing, AI content creation, etc.",
-    "expansion.downloadData": "Download Data Expansion",
+    "expansion.downloadData": "Download Data",
     "expansion.downloadData.desc": "Download data package (valid until consumed)",
-    "expansion.GA": "Overseas Acceleration Data Expansion",
+    "expansion.GA": "Overseas Acceleration Data",
     "expansion.GA.desc": "CDN/OSS acceleration package: 10TB per package (valid until consumed)",
     "expansion.points": " points",
     "form.required": "Please check the required information",
@@ -112,17 +115,19 @@
     "ga.hint": "Overseas acceleration data package, flexible top-up when consumed within validity period",
     "ga.unit": "/10T/year",
     "sso.unit": "/channel/year",
-    "ai.AutoTagEngine.quantity": "{{value}} AI points package(s)",
+    "ai.AutoTagEngine.unit": "copy",
+    "expand.download.quantity": "( including {{value}})",
+    "ai.AutoTagEngine.quantity": "( including {{value}}  AI points)",
     "ai.AutoTagEngine.des": "Base annual fee ({{prefix}}{{moduleCost}}/year) + Permanent AI points package x {{pointsNum}}\n({{prefix}}{{pointsCost}}); 268,000 points per package (≈200M tokens)",
     "ai.AutoTagEngine.previewDes": "Base annual fee + Permanent AI points package；\n  268,000 points per package (≈200M tokens)",
     "discount.settings": "Discount Settings",
     "discount.input.label": "Please enter discount value",
     "discount.input.hint": "Minimum discount cannot be less than 20% OFF",
     "discount.unit": "% OFF",
-    "feature.display.options": "Feature Display Options",
-    "unselected.modules.pricing": "Unselected Modules Pricing",
-    "show.unselected.modules": "Show Unselected Module Pricing",
-    "hide.unselected.modules": "Hide Unselected Module Pricing",
+    "feature.display.options": "Feature List",
+    "unselected.modules.pricing": "Unselected modules quote",
+    "show.unselected.modules": "Show unselected module quote",
+    "hide.unselected.modules": "Hide unselected module quote",
     "saas.standard.enterprise": "SaaS Standard Enterprise Edition",
     "perpetual.license.standard": "Perpetual License Current Standard Enterprise Edition",
     "admin.contributor.member": "Admin, Contributor and Member roles configurable",
@@ -138,5 +143,6 @@
     "times.per.year": "times per year",
     "service.cost": "Service Cost",
     "museDAM.software": "MuseDAM Software",
-    "package": " data package"
+    "package": " data package",
+    "not.buy.modules": "Unselected modules for reference"
 }
