--- a/src/app/i18n/locales/zh-CN/quotation.json
+++ b/src/app/i18n/locales/zh-CN/quotation.json
@@ -22,6 +22,7 @@
     "feature.overview": "展示功能概览（推荐）",
     "feature.details": "展示功能概览 + 所有详情",
     "generate.now": "立即生成",
+    "generating": "生成中...",
     "input.placeholder": "请输入",
     "basic.memberSeats.hint": "可配置管理员、贡献者和成员角色权限",
     "basic.memberSeats.des": "￥1,000/席/年（￥84/席/月）",
@@ -46,7 +47,7 @@
     "quote.export": "保存为 PDF",
     "quote.NO": "报价单 No.",
     "quote.date": "报价日期",
-    "quote.valid.days": "有效期为30天",
+    "quote.valid.days": "有效期为 30 天",
     "quite.product.name": "产品名称",
     "quite.product.quantity": "数量",
     "quite.product.unit.price": "单价",
@@ -55,6 +56,8 @@
     "enterprise.edition": "MuseDAM 企业版",
     "software.license": "MuseDAM 软件授权",
     "year.s": "年",
+    "years": "年",
+    "year": "年",
     "seats": "席",
     "points.month": "点/月",
     "per.year": "/年",
@@ -68,7 +71,6 @@
     "module.customMetadataFields": "元数据自定义字段",
     "module.watermark": "水印",
     "module.enterpriseSSO": "企业 SSO 登录",
-    "module.enterpriseSSO.private": "企业 SSO 登录（飞书, 企业微信）",
     "module.customerService": "工单支持",
     "module.professionalServices": "专业服务与支持",
     "private.implementation": "私有化部署实施",
@@ -81,20 +83,21 @@
     "service.provider": "服务提供商",
     "service.provider.name": "特赞（上海）信息科技有限公司",
     "service.terms": "服务条款",
-    "service.terms.1": "1. 本报价单有效期为30天。",
+    "service.terms.1": "1. 本报价单有效期为 30 天。",
     "service.terms.2": "2. 服务期限自合同签署并确认付款后开始，有效期一年。",
     "service.terms.3": "3. 用户席位、存储空间可根据实际业务需求进行扩充，增加费用按当前服务价格及剩余服务期限计算。",
     "service.terms.4": "4. AI 点数、下载流量、海外加速流量可根据实际业务需求灵活扩充，按最低起购规格进行增购。",
     "capacity.expansion": "扩充服务",
-    "expansion.memberSeats": "成员席位扩充",
+    "expansion": "扩充",
+    "expansion.memberSeats": "成员席位",
     "expansion.memberSeats.desc": "可配置管理员、贡献者和成员角色权限",
-    "expansion.storageSpace": "存储空间扩充",
+    "expansion.storageSpace": "存储空间",
     "expansion.storageSpace.desc": "每月下载流量跟随存储容量",
-    "expansion.aiPoints": "AI 点数扩充",
+    "expansion.aiPoints": "AI 点数",
     "expansion.aiPoints.desc": "一次性永久 AI 点数包 26.8 万点 (≈2亿 Token) /份，有效期消耗完为止；AI 点数可用于自定义 AI 标签、智能解析和 AI 内容创作等",
-    "expansion.downloadData": "下载流量扩充",
+    "expansion.downloadData": "下载流量",
     "expansion.downloadData.desc": "下载流量包 1TB/份（有效期至消耗完为止）",
-    "expansion.GA": "海外加速流量扩充",
+    "expansion.GA": "海外加速流量",
     "expansion.GA.desc": "CDN/OSS 加速流量包 10TB/份（消耗完为止）",
     "expansion.points": " 点",
     "form.required": "请填写必填信息",
@@ -112,7 +115,9 @@
     "ga.hint": "海外加速流量包，有效期内消耗完毕可灵活增购",
     "ga.unit": "/10T/年",
     "sso.unit": "/渠道/年",
-    "ai.AutoTagEngine.quantity": "{{value}}份AI点数包",
+    "ai.AutoTagEngine.unit": "份",
+    "ai.AutoTagEngine.quantity": "（含 {{value}}万点）",
+    "expand.download.quantity": "（含 {{value}}）",
     "ai.AutoTagEngine.des": "基础年度模块费 ({{prefix}}{{moduleCost}}/年) + 永久点数包 x {{pointsNum}} ({{prefix}} {{pointsCost}})；\n AI 算力点数包每份为 26.8万点 (≈2亿 Tokens)",
     "ai.AutoTagEngine.previewDes": "基础年度模块费 + 永久点数包；\n AI 算力点数包每份为 26.8万点 (≈2亿 Tokens)",
     "discount.settings": "优惠设置",
@@ -137,5 +142,6 @@
     "private.edition.major.iterations.price": "根据运维年限定价",
     "times.per.year": "次/年",
     "service.cost": "服务费用",
-    "museDAM.software": "MuseDAM 软件"
+    "museDAM.software": "MuseDAM 软件",
+    "not.buy.modules": "未选模块供参考"
 }
