--- a/src/app/i18n/locales/en-US/quotation.json
+++ b/src/app/i18n/locales/en-US/quotation.json
@@ -22,6 +22,8 @@
     "feature.overview": "Feature Overview",
     "feature.details": "Feature Overview + Details",
     "generate.now": "Generate Now",
+    "saving": "Saving",
+    "save.and.preview": "Save and Preview",
     "generating": "Generating",
     "input.placeholder": "Please enter",
     "basic.memberSeats.hint": "Admin, Contributor, and Member roles configurable",
@@ -117,7 +119,8 @@
     "sso.unit": "/channel/year",
     "ai.AutoTagEngine.unit": "copy",
     "expand.download.quantity": "( including {{value}})",
-    "ai.AutoTagEngine.quantity": "( including {{value}}  AI points)",
+    "ai.AutoTagEngine.quantity": "( including {{value}}  AI points )",
+    "ai.AutoTagEngine.quantity.perYear": "( including {{value}}  AI points/year)",
     "ai.AutoTagEngine.des": "Base annual fee ({{prefix}}{{moduleCost}}/year) + Permanent AI points package x {{pointsNum}}\n({{prefix}}{{pointsCost}}); 268,000 points per package (≈200M tokens)",
     "ai.AutoTagEngine.previewDes": "Base annual fee + Permanent AI points package；\n  268,000 points per package (≈200M tokens)",
     "discount.settings": "Discount Settings",
@@ -144,5 +147,38 @@
     "service.cost": "Service Cost",
     "museDAM.software": "MuseDAM Software",
     "package": " data package",
-    "not.buy.modules": "Unselected modules for reference"
+    "not.buy.modules": "Unselected modules for reference",
+    "share.title": "MuseDAM Quote",
+    "share.subtitle": "ID: {{quoteNo}}",
+    "share.password.required": "Access password required",
+    "share.password.placeholder": "Please enter access password",
+    "share.password.submit": "View Now",
+    "share.not.shared": "Quote is not shared",
+    "share.invalid.link": "Invalid share link",
+    "share.invalid.id": "Invalid share ID",
+    "share.enter.password": "Please enter access password",
+    "share.dialog.title": "Share Settings",
+    "share.dialog.public.access": "Anyone who obtains the sharing link can access this quotation",
+    "share.dialog.share.link": "MuseDAM quotation",
+    "share.dialog.access.permissions": "Access Permissions",
+    "share.dialog.view.only": "View Only",
+    "share.dialog.can.download": "Can Download",
+    "share.dialog.encrypted.share": "Encrypted Share",
+    "share.dialog.access.password": "Access Password",
+    "share.dialog.password.length": "Length 4-18 characters",
+    "share.dialog.copy.link": "Copy Link",
+    "share.dialog.copy.link.password": "Copy Link & Password",
+    "share.dialog.user.invalid": "Invalid user information",
+    "share.dialog.update.success": "Settings updated",
+    "share.dialog.update.failed": "Update failed, please try again",
+    "share.dialog.insufficient.permissions": "Insufficient permissions",
+    "share.dialog.password.length.error": "Password length must be between 4-18 characters",
+    "share.dialog.auto.password.generated": "Public access enabled, 4-digit random password auto-generated",
+    "share.dialog.encrypted.enabled": "Encrypted sharing enabled, 4-digit random password auto-generated",
+    "preview.invalid.user.quotation": "Invalid user or quotation ID",
+    "preview.invalid.team.id": "Invalid team ID",
+    "preview.invalid.login.info": "Invalid login information",
+    "preview.get.quotation.failed": "Failed to get quotation",
+    "preview.quotation.parse.failed": "Failed to parse quotation content",
+    "free": "Free"
 }
