--- a/src/app/i18n/locales/zh-CN/quotation.json
+++ b/src/app/i18n/locales/zh-CN/quotation.json
@@ -22,6 +22,8 @@
     "feature.overview": "展示功能概览（推荐）",
     "feature.details": "展示功能概览 + 所有详情",
     "generate.now": "立即生成",
+    "saving": "保存中...",
+    "save.and.preview": "保存并预览",
     "generating": "生成中...",
     "input.placeholder": "请输入",
     "basic.memberSeats.hint": "可配置管理员、贡献者和成员角色权限",
@@ -117,6 +119,7 @@
     "sso.unit": "/渠道/年",
     "ai.AutoTagEngine.unit": "份",
     "ai.AutoTagEngine.quantity": "（含 {{value}}万点）",
+    "ai.AutoTagEngine.quantity.perYear": "（含 {{value}}万点/年）",
     "expand.download.quantity": "（含 {{value}}）",
     "ai.AutoTagEngine.des": "基础年度模块费 ({{prefix}}{{moduleCost}}/年) + 永久点数包 x {{pointsNum}} ({{prefix}} {{pointsCost}})；\n AI 算力点数包每份为 26.8万点 (≈2亿 Tokens)",
     "ai.AutoTagEngine.previewDes": "基础年度模块费 + 永久点数包；\n AI 算力点数包每份为 26.8万点 (≈2亿 Tokens)",
@@ -143,5 +146,38 @@
     "times.per.year": "次/年",
     "service.cost": "服务费用",
     "museDAM.software": "MuseDAM 软件",
-    "not.buy.modules": "未选模块供参考"
+    "not.buy.modules": "未选模块供参考",
+    "share.title": "MuseDAM 报价单",
+    "share.subtitle": "ID: {{quoteNo}}",
+    "share.password.required": "需要访问密码",
+    "share.password.placeholder": "请输入访问密码",
+    "share.password.submit": "立即查看",
+    "share.not.shared": "报价单未开启分享",
+    "share.invalid.link": "无效的分享链接",
+    "share.invalid.id": "分享ID无效",
+    "share.enter.password": "请填写访问密码",
+    "share.dialog.title": "分享设置",
+    "share.dialog.public.access": "任何获取分享链接的人，均可访问此报价单",
+    "share.dialog.share.link": "MuseDAM 报价单",
+    "share.dialog.access.permissions": "访问权限",
+    "share.dialog.view.only": "仅查看",
+    "share.dialog.can.download": "可下载",
+    "share.dialog.encrypted.share": "加密分享",
+    "share.dialog.access.password": "访问密码",
+    "share.dialog.password.length": "长度 4-18 个字符",
+    "share.dialog.copy.link": "复制链接",
+    "share.dialog.copy.link.password": "复制链接及密码",
+    "share.dialog.user.invalid": "用户信息无效",
+    "share.dialog.update.success": "设置已更新",
+    "share.dialog.update.failed": "更新失败，请重试",
+    "share.dialog.insufficient.permissions": "权限不足",
+    "share.dialog.password.length.error": "密码长度必须在4-18个字符之间",
+    "share.dialog.auto.password.generated": "公开访问已开启，已自动生成4位随机密码",
+    "share.dialog.encrypted.enabled": "加密分享已开启，已自动生成4位随机密码",
+    "preview.invalid.user.quotation": "无效的用户或报价单ID",
+    "preview.invalid.team.id": "无效的团队ID",
+    "preview.invalid.login.info": "无效的登录信息",
+    "preview.get.quotation.failed": "获取报价单失败",
+    "preview.quotation.parse.failed": "报价单内容解析失败",
+    "free": "赠送"
 }
