--- a/src/app/i18n/locales/zh-CN/header.json
+++ b/src/app/i18n/locales/zh-CN/header.json
@@ -50,6 +50,6 @@
   "more-features.encrypted-sharing.title": "加密分享",
   "more-features.team-management.title": "团队管理",
   "more-features.dynamic-feedback.title": "动态反馈",
-  "not.sale.user": "您不是销售用户",
+  "not.sale.user": "暂无权限访问",
   "not.sale.user.button": "查看价格"
 }
